HID_REPORT_TEST

--- a/leden.ioc
+++ b/leden.ioc
@@ -20,7 +20,7 @@ Mcu.Pin0=PE5
 Mcu.Pin1=PE6
 Mcu.Pin10=PD6
 Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_USB_DEVICE_VS_USB_DEVICE_HID_FS
+Mcu.Pin12=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin2=OSC_IN
 Mcu.Pin3=OSC_OUT
 Mcu.Pin4=PA9
@@ -130,13 +130,15 @@ RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.VCOOutput2Freq_Value=8000000
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
-USB_DEVICE.CLASS_NAME_FS=HID
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,VID
+USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,VID,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE
+USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=8
+USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=63
 USB_DEVICE.VID=1155
-USB_DEVICE.VirtualMode=Hid
-USB_DEVICE.VirtualModeFS=Hid_FS
+USB_DEVICE.VirtualMode=CustomHid
+USB_DEVICE.VirtualModeFS=Custom_Hid_FS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Mode=HID_FS
-VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Mode=CUSTOM_HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 board=custom
